src/styles/global.scss
@import "normalize.css/normalize.css";
@import "./material";

a {
  color: var(--mdc-theme-secondary);

  &:hover {
    text-decoration: none;
  }
}

body {
  background-color: var(--mdc-theme-background);
  color: var(--mdc-theme-on-surface);
  font-family: Segoe UI, system-ui, -apple-system, sans-serif;
  height: 100%;
  overflow-wrap: break-word;
  position: relative;
  height: 100%;
  width: 100%;
}

figure {
  text-align: center;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-weight: 500;
  margin-bottom: 12px;
}

h1 {
  font-size: 36px;
  line-height: 36px;
  margin-bottom: 36px;
}

h2 {
  font-size: 28px;
  line-height: 28px;
}

h3 {
  font-size: 20px;
  line-height: 20px;
}

h4,
h5,
h6 {
  font-weight: 450;
  font-size: 16px;
  line-height: 16px;
}

img {
  height: auto;
  max-width: 100%;
}

main {
  padding: 0 24px 54px 24px;

  @media (min-width: 577px) {
    left: 200px;
    position: absolute;
    right: 0;
    top: 0;
  }
}

.code-block > div {
  overflow: auto;
}

.container,
.container-fluid {
  width: auto;
}

.mdc-button {
  --mdc-theme-primary: var(--mdc-theme-secondary);
}

.mdc-card {
  margin: 8px;
  > .mdc-card-wrapper__text-section,
  > .mdc-card__content {
    margin: 0 16px;
  }
}

.mdc-deprecated-list {
  color: var(--mdc-theme-on-primary, rgba(0, 0, 0, 0.87));
}

.mdc-tab-indicator__content--underline {
  border-color: var(--mdc-theme-on-surface) !important;
}

.mdc-tab__text-label {
  color: var(--mdc-theme-on-surface) !important;
}

